test/valid/57163_strings_many_strings/many_strings.mag
-- Author: 57163, Guilherme Dias

const barrier : String = 	"---------------------------------"
const number : Int = 10

fun cicles(num) : Int -> Unit =
	while num > 0 do (print(barrier); num-1)

fun main(_) : Unit -> Unit =
	cicles(number)
