test/invalid-syntax/57163_no_top_level_declarations/this_aint_python_gimme_topleveldeclarations.mag
-- Author: 57163, Guilherme Dias

var id : Int = 10
var multiplier : Int = 10

print(id * multiplier)
